--- a/py3/testFijiTiffMetada.ipynb
+++ b/py3/testFijiTiffMetada.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -71,10 +71,57 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Unit \\u00B5m\n",
-      "Comment \u0000\u0000\u0000\u0001\u0000M\u0000i\u0000c\u0000r\u0000o\u0000s\u0000c\u0000o\u0000p\u0000e\u0000:\u0000 \u0000F\u0000E\u0000I\u0000 \u0000S\u0000i\u0000r\u0000i\u0000o\u0000n\u0000 \u0000D\u00005\u00005\u00005\u00007\u0000 \u0000S\u0000o\u0000f\u0000t\u0000w\u0000a\u0000r\u0000e\u0000:\u0000 \u0000a\u0000n\u0000a\u0000l\u0000y\u0000S\u0000I\u0000S\u0000 \u00005\u0000.\u00000\u0000,\u0000 \u0000U\u0000s\u0000e\u0000r\u0000:\u0000 \u0000J\u0000.\u0000 \u0000R\u0000.\u0000 \u0000M\u0000i\u0000n\u0000t\u0000e\u0000r\u0000, \u00001\u00005\u0000 \u0000k\u0000V\u0000,\u0000 \u0000S\u00003\u0000,\u0000 \u00005\u0000 \u0000m\u0000m\u0000,\u0000 \u0000U\u0000H\u0000R\u0000 \u0000E\u0000H\u0000T\u0000,\u0000 \u0000p\u0000l\u0000a\u0000n\u0000a\u0000r\u0000-\u00000\u00002\u0000 \u0000D\u0000O\u0000E\u0000-\u0000s\u0000t\u0000d\u0000 \u0000c\u0000h\u0000e\u0000m\u0000-\u0000e\u0000t\u0000c\u0000h\n",
+      "('new_subfile_type', 0)\n",
+      "('samples_per_pixel', 1)\n",
+      "('image_width', 1024)\n",
+      "('fill_order', 1)\n",
+      "('y_resolution', (17129591, 1000000))\n",
+      "('imagej_byte_counts', (12, 250))\n",
+      "('imagej_metadata', b'IJIJinfo\\x00\\x00\\x00\\x01\\x00M\\x00i\\x00c\\x00r\\x00o\\x00s\\x00c\\x00o\\x00p\\x00e\\x00:\\x00 \\x00F\\x00E\\x00I\\x00 \\x00S\\x00i\\x00r\\x00i\\x00o\\x00n\\x00 \\x00D\\x005\\x005\\x005\\x007\\x00 \\x00S\\x00o\\x00f\\x00t\\x00w\\x00a\\x00r\\x00e\\x00:\\x00 \\x00a\\x00n\\x00a\\x00l\\x00y\\x00S\\x00I\\x00S\\x00 \\x005\\x00.\\x000\\x00,\\x00 \\x00U\\x00s\\x00e\\x00r\\x00:\\x00 \\x00J\\x00.\\x00 \\x00R\\x00.\\x00 \\x00M\\x00i\\x00n\\x00t\\x00e\\x00r\\x00\\n\\x001\\x005\\x00 \\x00k\\x00V\\x00,\\x00 \\x00S\\x003\\x00,\\x00 \\x005\\x00 \\x00m\\x00m\\x00,\\x00 \\x00U\\x00H\\x00R\\x00 \\x00E\\x00H\\x00T\\x00,\\x00 \\x00p\\x00l\\x00a\\x00n\\x00a\\x00r\\x00-\\x000\\x002\\x00 \\x00D\\x00O\\x00E\\x00-\\x00s\\x00t\\x00d\\x00 \\x00c\\x00h\\x00e\\x00m\\x00-\\x00e\\x00t\\x00c\\x00h')\n",
+      "('x_resolution', (16763784, 1000000))\n",
+      "('image_length', 743)\n",
+      "('strip_byte_counts', (1521664,))\n",
+      "('planar_configuration', 1)\n",
+      "('orientation', 1)\n",
+      "('strip_offsets', (528,))\n",
+      "('ycbcr_subsampling', 1)\n",
+      "('predictor', 1)\n",
+      "('bits_per_sample', 16)\n",
+      "('compression', 1)\n",
+      "('sample_format', 1)\n",
+      "('image_description', b'ImageJ=1.50e\\nunit=\\\\u00B5m\\nmin=544.0\\nmax=3743.0\\n')\n",
+      "('ycbcr_positioning', 1)\n",
+      "('rows_per_strip', 743)\n",
+      "('photometric', 1)\n",
+      "('resolution_unit', 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "with TiffFile(semImgPth) as tif:\n",
+    "    images = tif.asarray()\n",
+    "    for page in tif:\n",
+    "        for tag in page.tags.values():\n",
+    "            t = tag.name, tag.value\n",
+    "            image = page.asarray()\n",
+    "            print(t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "ScaleY 0.058378510029807484\n",
-      "ScaleX 0.05965240306126588\n"
+      "Comment \u0000\u0000\u0000\u0001\u0000M\u0000i\u0000c\u0000r\u0000o\u0000s\u0000c\u0000o\u0000p\u0000e\u0000:\u0000 \u0000F\u0000E\u0000I\u0000 \u0000S\u0000i\u0000r\u0000i\u0000o\u0000n\u0000 \u0000D\u00005\u00005\u00005\u00007\u0000 \u0000S\u0000o\u0000f\u0000t\u0000w\u0000a\u0000r\u0000e\u0000:\u0000 \u0000a\u0000n\u0000a\u0000l\u0000y\u0000S\u0000I\u0000S\u0000 \u00005\u0000.\u00000\u0000,\u0000 \u0000U\u0000s\u0000e\u0000r\u0000:\u0000 \u0000J\u0000.\u0000 \u0000R\u0000.\u0000 \u0000M\u0000i\u0000n\u0000t\u0000e\u0000r\u0000, \u00001\u00005\u0000 \u0000k\u0000V\u0000,\u0000 \u0000S\u00003\u0000,\u0000 \u00005\u0000 \u0000m\u0000m\u0000,\u0000 \u0000U\u0000H\u0000R\u0000 \u0000E\u0000H\u0000T\u0000,\u0000 \u0000p\u0000l\u0000a\u0000n\u0000a\u0000r\u0000-\u00000\u00002\u0000 \u0000D\u0000O\u0000E\u0000-\u0000s\u0000t\u0000d\u0000 \u0000c\u0000h\u0000e\u0000m\u0000-\u0000e\u0000t\u0000c\u0000h\n",
+      "ScaleX 0.05965240306126588\n",
+      "Unit \\u00B5m\n"
      ]
     }
    ],
@@ -111,7 +158,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/jrminter/git/OSImageAnalysis/images/noz-with-SIS-metadata.tif'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "semImgPth = gitDir + os.sep + 'OSImageAnalysis' + os.sep \n",
+    "semImgPth +=  'images' + os.sep + 'noz-with-SIS-metadata.tif'\n",
+    "semImgPth"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('new_subfile_type', 0)\n",
+      "('samples_per_pixel', 1)\n",
+      "('image_width', 1024)\n",
+      "('fill_order', 1)\n",
+      "('y_resolution', (204, 1))\n",
+      "('artist', b'jrminter')\n",
+      "('x_resolution', (200, 1))\n",
+      "('image_length', 743)\n",
+      "('strip_byte_counts', (1521664,))\n",
+      "('planar_configuration', 1)\n",
+      "('orientation', 1)\n",
+      "('strip_offsets', (40,))\n",
+      "('ycbcr_subsampling', 1)\n",
+      "('predictor', 1)\n",
+      "('bits_per_sample', 16)\n",
+      "('compression', 1)\n",
+      "('photometric', 1)\n",
+      "('sample_format', 1)\n",
+      "('software', b'analySIS 5.0')\n",
+      "('ycbcr_positioning', 1)\n",
+      "('rows_per_strip', 743)\n",
+      "('33560', 1523056)\n",
+      "('make', b'Olympus Soft Imaging Solutions')\n",
+      "('resolution_unit', 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "with TiffFile(semImgPth) as tif:\n",
+    "    images = tif.asarray()\n",
+    "    for page in tif:\n",
+    "        for tag in page.tags.values():\n",
+    "            t = tag.name, tag.value\n",
+    "            image = page.asarray()\n",
+    "            print(t)\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['compression', 'resolution'])\n",
+      "dict_values(['raw', (200.0, 204.0)])\n"
+     ]
+    }
+   ],
+   "source": [
+    "from PIL import Image\n",
+    "from PIL.ExifTags import TAGS\n",
+    " \n",
+    "def get_exif(fn):\n",
+    "    i = Image.open(fn)\n",
+    "    print(i.info.keys())\n",
+    "    print(i.info.values())\n",
+    "        \n",
+    "   \n",
+    "\n",
+    "get_exif(semImgPth)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
